# robotsOvejas

./: CMakeCache.txt  CMakeLists.txt  README.md  simpleworld.xml
oveja/: CMakeCache.txt  Makefile  cmake_install.cmake  config  oveja.cdsl
oveja/etc/: config  config1  config2  config3  config4
oveja/src/: CMakeLists.txt  Makefile  cmake_install.cmake  genericworker.cpp  main.cpp  specificmonitor.cpp  specificworker.cpp  specificworker.h
oveja/src/MyFirstComp_autogen/EWIEGA46WW/: moc_specificworker.cpp
oveja/src/MyFirstComp_autogen/include/: ui_mainUI.h
